// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<WithTranslationContextComponent
  translations={null}
>
  <ForgotPassword
    error={null}
    footer={null}
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title={null}
    translations={
      Object {
        "email": "E-mail",
        "resetPassword": "Reset password",
      }
    }
  >
    <div
      className="root"
    >
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="mb-3"
          >
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="resetEmail"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="E-mail"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="email"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="resetEmail"
              >
                <div
                  className="label"
                >
                  E-mail
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="resetEmail"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="email"
                  />
                </div>
              </label>
            </TextField>
          </div>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            label="Reset password"
            labelVisibility="all"
            loading={false}
            priority="default"
            size="medium"
            type="submit"
            variant="primary"
          >
            <button
              className="root
        priorityDefault
        sizeMedium
        variantPrimary
        isRootBlock"
              disabled={false}
              onClick={null}
              title={null}
              type="submit"
            >
              <span
                className="label"
              >
                Reset password
              </span>
            </button>
          </Button>
        </form>
      </div>
    </div>
  </ForgotPassword>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly 2`] = `
<WithTranslationContextComponent
  translations={
    Object {
      "email": "E-mail",
      "resetPassword": "Reset password",
    }
  }
>
  <ForgotPassword
    error={null}
    footer={null}
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title={null}
    translations={
      Object {
        "email": "E-mail",
        "resetPassword": "Reset password",
      }
    }
  >
    <div
      className="root"
    >
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="mb-3"
          >
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="resetEmail"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="E-mail"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="email"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="resetEmail"
              >
                <div
                  className="label"
                >
                  E-mail
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="resetEmail"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="email"
                  />
                </div>
              </label>
            </TextField>
          </div>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            label="Reset password"
            labelVisibility="all"
            loading={false}
            priority="default"
            size="medium"
            type="submit"
            variant="primary"
          >
            <button
              className="root
        priorityDefault
        sizeMedium
        variantPrimary
        isRootBlock"
              disabled={false}
              onClick={null}
              title={null}
              type="submit"
            >
              <span
                className="label"
              >
                Reset password
              </span>
            </button>
          </Button>
        </form>
      </div>
    </div>
  </ForgotPassword>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly with all props except translations 1`] = `
<WithTranslationContextComponent
  error="Error message"
  footer={
    <a
      href="http://example.com"
    >
      link
    </a>
  }
  logo="http://satyr.io/100x100/33?text=logo"
  title="Company"
  translations={null}
>
  <ForgotPassword
    error="Error message"
    footer={
      <a
        href="http://example.com"
      >
        link
      </a>
    }
    logo="http://satyr.io/100x100/33?text=logo"
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title="Company"
    translations={
      Object {
        "email": "E-mail",
        "resetPassword": "Reset password",
      }
    }
  >
    <div
      className="root"
    >
      <div
        className="title"
      >
        Company
      </div>
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="error"
          >
            Error message
          </div>
          <div
            className="mb-3"
          >
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="resetEmail"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="E-mail"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="email"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="resetEmail"
              >
                <div
                  className="label"
                >
                  E-mail
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="resetEmail"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="email"
                  />
                </div>
              </label>
            </TextField>
          </div>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            label="Reset password"
            labelVisibility="all"
            loading={false}
            priority="default"
            size="medium"
            type="submit"
            variant="primary"
          >
            <button
              className="root
        priorityDefault
        sizeMedium
        variantPrimary
        isRootBlock"
              disabled={false}
              onClick={null}
              title={null}
              type="submit"
            >
              <span
                className="label"
              >
                Reset password
              </span>
            </button>
          </Button>
        </form>
        <div
          className="footer"
        >
          <a
            href="http://example.com"
          >
            link
          </a>
        </div>
      </div>
    </div>
  </ForgotPassword>
</WithTranslationContextComponent>
`;
